--- a/client/src/styles/Education.css
+++ b/client/src/styles/Education.css
@@ -17,7 +17,7 @@
 @media screen and (max-width: 475px) {
   /* Education */
   .education {
-    padding: 5% 10% 5% 10%;
+    padding: 5% 5% 5% 5%;
     display: flex;
     flex-flow: column wrap;
     background: #f2f2f2;
