--- a/client/src/styles/Experience.css
+++ b/client/src/styles/Experience.css
@@ -17,7 +17,7 @@
 /* Media query for mobile phones */
 @media screen and (max-width: 475px) {
   .experience {
-    padding: 5% 10% 5% 10%;
+    padding: 5% 5% 5% 5%;
     display: flex;
     flex-flow: column wrap;
     text-align: center;
