--- a/client/src/styles/Projects.css
+++ b/client/src/styles/Projects.css
@@ -48,7 +48,7 @@
 /* Media query for mobile phones */
 @media screen and (max-width: 475px) {
   .projects {
-    padding: 5% 10%;
+    padding: 5% 5%;
     display: flex;
     flex-flow: column wrap;
     justify-content: center;
