--- a/client/src/styles/Skills.css
+++ b/client/src/styles/Skills.css
@@ -32,7 +32,7 @@
 @media screen and (max-width: 475px) {
   /* Skills */
   .skills {
-    padding: 5% 10% 5% 10%;
+    padding: 5% 5% 5% 5%;
     min-width: unset;
     display: flex;
     flex-flow: column wrap; /* flex-direction flex-wrap */
